# erhi

./: .gitattributes  .gitmodules  CMakeLists.txt
examples/: 01_hello_erhi.cpp
examples/utility/: default_message_callback.cpp  default_message_callback.hpp
include/erhi/common/: common.hpp  device.hpp  exception.hpp  flags_format.hpp  h_result.hpp  handle.hpp  instance.hpp  message.hpp  object.hpp  physical_device.hpp  queue.hpp
include/erhi/common/command/: command.hpp  command_buffer.hpp  dxc_shader.hpp  frame_buffer.hpp  queue.hpp  render_pass.hpp  shader.hpp
include/erhi/common/context/: context.hpp  device.hpp  instance.hpp  message.hpp  physical_device.hpp
include/erhi/common/present/: swap_chain.hpp  window.hpp
include/erhi/common/resource/: allocator.hpp  descriptor.hpp  memory.hpp  resource.hpp
include/erhi/common/utility/: smart_ptr.hpp  stream_message_callback.hpp
include/erhi/dx12/: device.hpp  instance.hpp  message.hpp  native.hpp  physical_device.hpp  queue.hpp
include/erhi/dx12/command/: command.hpp  command_buffer.hpp  frame_buffer.hpp  queue.hpp  render_pass.hpp  shader.hpp
include/erhi/dx12/context/: context.hpp  device.hpp  instance.hpp  message.hpp  physical_device.hpp
include/erhi/dx12/present/: swap_chain.hpp  window.hpp
include/erhi/dx12/resource/: buffer.hpp  descriptor.hpp  memory.hpp  resource.hpp  texture.hpp
include/erhi/vulkan/: device.hpp  handle.hpp  instance.hpp  message.hpp  native.hpp  physical_device.hpp  queue.hpp
include/erhi/vulkan/command/: command.hpp  command_buffer.hpp  frame_buffer.hpp  queue.hpp  render_pass.hpp  shader.hpp
include/erhi/vulkan/context/: context.hpp  device.hpp  instance.hpp  message.hpp  physical_device.hpp
include/erhi/vulkan/present/: present.hpp  swap_chain.hpp  window.hpp
include/erhi/vulkan/resource/: allocator.hpp  descriptor.hpp  memory.hpp  resource.hpp
notes/: command.md  descriptor.md  memory.md  pipeline_state_object.md  to-do.md
playground/: command_buffer.cpp
scripts/: initialize_VmaVulkanFunctions.py
shaders/: 01_hello_erhi.hlsl
source/common/: common.cpp  device.cpp  exception.cpp  h_result.cpp  instance.cpp  message.cpp  physical_device.cpp  queue.cpp
source/common/command/: command_buffer.cpp  frame_buffer.cpp  queue.cpp  render_pass.cpp  shader.cpp
source/common/context/: device.cpp  instance.cpp  message.cpp  physical_device.cpp
source/common/present/: swap_chain.cpp  window.cpp
source/common/resource/: allocator.cpp  descriptor.cpp  memory.cpp
source/common/utility/: stream_message_callback.cpp
source/dx12/: agility.cpp  device.cpp  instance.cpp  message.cpp  native.cpp  physical_device.cpp  queue.cpp
source/dx12/command/: command_buffer.cpp  frame_buffer.cpp  queue.cpp  render_pass.cpp  shader.cpp
source/dx12/context/: device.cpp  instance.cpp  message.cpp  physical_device.cpp
source/dx12/present/: swap_chain.cpp  window.cpp
source/dx12/resource/: buffer.cpp  descriptor.cpp  memory.cpp  texture.cpp
source/vulkan/: device.cpp  instance.cpp  message.cpp  native.cpp  physical_device.cpp  queue.cpp
source/vulkan/command/: command_buffer.cpp  frame_buffer.cpp  queue.cpp  render_pass.cpp  shader.cpp
source/vulkan/context/: device.cpp  instance.cpp  message.cpp  physical_device.cpp
source/vulkan/present/: swap_chain.cpp  window.cpp
source/vulkan/resource/: descriptor.cpp  memory.cpp
